Fixed issue with navbar not showing

--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -1,12 +1,8 @@
 #header {
-  position: relative;
-  display: block;
-  height: auto;
-  width: auto;
+  padding: 100px 0;
   background: url("../images/sarah2.jpg") no-repeat center center;
   background-attachment: scroll;
   background-size: cover;
-  padding: 100px 0;
 
   .brand {
     position: relative;
